feat: add filter for list
