# internal/models/todo.go
@@ -16,9 +16,10 @@ type Todo struct {
 	ID   uint      `gorm:"primaryKey" json:"-"`
 	UUID uuid.UUID `gorm:"type:uuid;uniqueIndex;not null" json:"uuid"`
 
+	Assignee    string `gorm:"type:varchar(255);not null" json:"assignee"`
 	Title       string `gorm:"type:varchar(255);not null" json:"title"`
 	Description string `gorm:"type:text" json:"description"`
-	Priority    int    `gorm:"not null;default:0" json:"priority"`
+	Priority    int    `gorm:"not null;default:1" json:"priority"`
 	Status      int    `gorm:"type:integer;not null;default:0" json:"status"`
 
 	ToDoStartAt *time.Time `gorm:"type:timestamptz" json:"todo_start_at"`
